--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.wringer.MainActivity">
     <item
+        android:id="@+id/new_geofence"
         android:orderInCategory="100"
-        android:title="New Geofence" />
+        android:title="New Geofence"
+        app:showAsAction="never" />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="101"
