--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:tint="#FAF4F6"
         app:backgroundTint="#E91E1E"
         app:fabSize="auto"
         app:srcCompat="@android:drawable/ic_input_add" />
